[tool.poetry]
name = "nivupdate"
version = "0.1.0"
description = "Update Niv dependencies via GitLab Pull Requests with a single command"
license = "MIT"
authors = ["nikstur <nikstur@outlook.com>"]

[tool.poetry.scripts]
nivupdate = "nivupdate.main:main"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "^3.1.29"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.991"
flake8 = "^6.0.0"
isort = "^5.10.1"

[tool.isort]
profile = "black"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
