[tool.poetry]
name = "nivupdate"
version = "0.1.0"
description = "Update Niv dependencies via GitLab Pull Requests with a single command"
license = "MIT"
authors = ["nikstur <nikstur@outlook.com>"]

[tool.poetry.scripts]
nivupdate = "nivupdate.main:main"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "^3.1.41"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"

ruff = "^0.5.0"
black = "^24.0.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
